# fukinotou

./: .gitignore  CLAUDE.md  LICENSE  README.md  Taskfile.yml  pyproject.toml
.claude/skills/bump__version/: SKILL.md
.github/: dependabot.yml
.github/workflows/: release.yml  validate.yml
example/: load_from_csv.py  load_from_invalid_csv.py  load_from_json.py  pyproject.toml  user2.json  users.csv  users__invalid.csv
src/fukinotou/: __init__.py  csv_loader.py  dataframe_exportable.py  image_loader.py  json_loader.py  jsonl_loader.py  parquet_loader.py  text_file_loader.py
src/fukinotou/abstraction/: dataframe_exportable.py
src/fukinotou/exception/: loading_error.py  loading_exception.py
src/fukinotou/path_handler/: path_searcher.py
tests/: example.csv  test_csv_loader.py  test_csv_loader_append.txt  test_dataframe_exportable.py  test_image_loader.py  test_json_loader.py  test_jsonl_loader.py  test_parquet_loader.py  test_path_searcher.py  test_text_file_loader.py
tests/json/: broken.json  file1.json  file2.json  file3.json  invalid.json  non_json.xml
tests/json/subdir/: subfile1.json  subfile2.json
tests/jsonl/: example.jsonl  invalid_json.jsonl  invalid_schema.jsonl
