[project]
name = "fukinotou"
version = "0.1.0"
description = "A simple Data Loader for Python"
readme = "README.md"
authors = [
    { name = "shunsock", email = "s.tsuchiya.business@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
