[project]
name = "fukinotou"
version = "0.1.0"
description = "A simple Data Loader for Python"
readme = "README.md"
authors = [
    { name = "shunsock", email = "s.tsuchiya.business@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "pydantic>=2.11.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]

[tool.hatch.build.targets.wheel]
include = ["src/fukinotou/py.typed"]

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.3.250308",
]

[tool.hatch.build]
packages = ["src/fukinotou"]
